# assistant

./: .cmake-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  assistant.workspace  main.cpp  ollama.workspace  tool.hpp  utils.hpp
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
assistant/: CMakeLists.txt  Curl.cpp  Curl.hpp  EnvExpander.cpp  EnvExpander.hpp  Process.cpp  Process.hpp  assistant.hpp  assistantlib.hpp  attributes.hpp  chat_completions_response_parser.cpp  chat_completions_response_parser.hpp  claude_client.cpp  claude_client.hpp  claude_response_parser.cpp  claude_response_parser.hpp  client.cpp  client.hpp  client_base.cpp  client_base.hpp  common.hpp  config.cpp  config.hpp  function.cpp  function.hpp  function_base.cpp  function_base.hpp  helpers.hpp  logger.hpp  mcp.cpp  mcp.hpp  mcp_local_process.cpp  mcp_local_process.hpp  model_options.hpp  ollama_client.cpp  ollama_client.hpp  openai_response_parser.cpp  openai_response_parser.hpp  tool.hpp
assistant/client/: claude_client.cpp  claude_client.hpp  client_base.cpp  client_base.hpp  ollama_client.cpp  ollama_client.hpp  openai_client.cpp  openai_client.hpp  openai_messages_client.cpp  openai_messages_client.hpp
assistant/common/: httplib.h  llm-cost.hpp  magic_enum.hpp  tokens.hpp
assistant/cpp-mcp/: CMakeLists.txt  mcp_logger.h  mcp_message.h  mcp_resource.cpp  mcp_resource.h  mcp_server.cpp  mcp_server.h  mcp_sse_client.cpp  mcp_sse_client.h  mcp_stdio_client.cpp  mcp_stdio_client.h  mcp_tool.h
cli/: CMakeLists.txt  main.cpp  utils.hpp
ollama/: CMakeLists.txt  client.cpp  client.hpp  client_base.cpp  client_base.hpp  config.cpp  config.hpp  function.cpp  function.hpp  function_base.cpp  function_base.hpp  helpers.hpp  logger.hpp  macros.hpp  mcp_local_process.cpp  mcp_local_process.hpp  model_options.hpp  ollama.cpp  ollama.hpp  ollamalib.hpp  thread_notifier.hpp  tool.hpp
ollama/common/: httplib.h
ollama/cpp-mcp/: CMakeLists.txt  mcp_logger.h  mcp_message.h  mcp_resource.cpp  mcp_server.cpp  mcp_server.h  mcp_sse_client.cpp  mcp_sse_client.h  mcp_stdio_client.cpp  mcp_stdio_client.h  mcp_tool.h
tests/: CMakeLists.txt  test_claude_response_parser.cpp  test_config.cpp  test_config_file.cpp  test_env_expander.cpp  test_history.cpp  test_openai_client.cpp  test_openai_messages_client.cpp  test_openai_response_format.cpp  test_openai_response_parser.cpp  test_process.cpp
